--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,8 +56,8 @@ workflows:
       #        only: master
       - orb-tools/increment:
           orb-ref: netgaintechnology/prebuild-orb
-          requires:
-            - pack-validate-orb
+          #requires:
+          #  - pack-validate-orb
           filters:
             branches:
               only: master
